# cygcd

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: usecase_networking.md
examples/: fd_source.py  process_source.py  signal_source.py
src/cygcd/: CMakeLists.txt  __init__.py  _core.pyi  _core.pyx
src/pygcd/: __init__.py  _core.pyx
tests/: test_cygcd.py  test_pygcd.py
