[project]
name = "pygcd"
version = "0.2.0"
description = "A Python extension module built with Cython"
requires-python = ">=3.9"

[build-system]
requires = ["scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/pygcd"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
