[project]
name = "cygcd"
version = "0.1.4"
description = "Python wrapper for Grand Central Dispatch (GCD) - macOS and Linux"
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["gcd", "grand-central-dispatch", "macos", "linux", "concurrency", "async", "dispatch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Operating System Kernels :: BSD",
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/pybind/cygcd"
Repository = "https://github.com/pybind/cygcd"
Issues = "https://github.com/pybind/cygcd/issues"

[build-system]
requires = ["scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/cygcd"]
wheel.exclude = ["*.pyx", "CMakeLists.txt"]
sdist.exclude = ["docs/", "examples/c/"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
